# tig-welder

./: .gitignore  README.md
boards/dspic-controller/: dspic-controller.bck  dspic-controller.kicad_pcb  dspic-controller.kicad_prl  dspic-controller.kicad_pro  dspic-controller.kicad_sch  dspic-controller.kicad_sym  dspic-controller.lib  dspic-controller.pro  dspic-controller.sch
boards/dspic-controller/dspic-controller.pretty/: welder_footprint.kicad_mod
boards/half-bridge-mod/: half-bridge-mod.kicad_pcb  half-bridge-mod.kicad_pro  half-bridge-mod.kicad_sch  half-bridge-mod.pro  half-bridge-mod.sch
boards/pico-controller/: pico-controller-cache.lib  pico-controller-rescue.kicad_sym  pico-controller.kicad_pcb  pico-controller.kicad_prl  pico-controller.kicad_pro  pico-controller.kicad_sch  pico-controller.pro  pico-controller.sch
boards/pico-controller/datasheets/: ctn.ipynb  ctn_interpolated.csv
boards/power-driver/: power-driver.kicad_pcb  power-driver.kicad_pro  power-driver.kicad_sch  power-driver.pro  power-driver.sch
boards/power-driver/power-driver-plot-2021-06-11/: power-driver-B_Cu.gbr  power-driver-B_Mask.gbr  power-driver-B_Paste.gbr  power-driver-B_SilkS.gbr  power-driver-Edge_Cuts.gbr  (+6 more)
boards/slow-switching-outputs/: slow-switching-outputs.kicad_pcb  slow-switching-outputs.kicad_pro  slow-switching-outputs.kicad_sch  slow-switching-outputs.pro  slow-switching-outputs.sch
boards/small-power/: small-power.kicad_pcb  small-power.kicad_pro  small-power.kicad_sch  small-power.sch
firmware/: CMakeLists.txt
firmware/dspic30f4012/include/: led_matrix.h  unpack.h
firmware/dspic30f4012/src/: led_matrix.c  main.c  unpack.c
firmware/include/tig-welder/: buzzer.h  hbridge.h  lcd_display.h  lcd_menu.h  lcd_menu_entry.h  lcd_menu_footer.h  relay.h  rotary_encoder.h  spi_adc.h  switch.h
firmware/pic18f2550/: unpack.ipynb
firmware/pic18f2550/include/: ascii_fonts.h  led_matrix.h  unpack.h
firmware/pic18f2550/src/: ascii_fonts.c  led_matrix.c  main.c  unpack.c
firmware/pico/: CMakeLists.txt
firmware/pico/include/tig-welder/: ctn.h  lcd_display.h  lcd_menu_entry.h  rotary_encoder.h  spi_adc.h
firmware/pico/pio/: rotary_encoder.pio
firmware/pico/src/: buzzer.cpp  hbridge.cpp  lcd_display.cpp  lcd_menu.cpp  spi_adc.cpp
firmware/pio/: rotary_encoder.pio
firmware/src/: buzzer.cpp  lcd_display.cpp  lcd_menu.cpp  main.cpp  rotary_encoder.cpp  spi_adc.cpp
half-bridge/: half-bridge.kicad_pcb  half-bridge.pro  half-bridge.sch
half-bridge-mod/: half-bridge-mod.kicad_pcb
half-bridge-mod/half-bridge-mod.pretty/: Terminal_Block_Welder.kicad_mod  Terminal_Block_Welder_no_hole.kicad_mod  welder_footprint.kicad_mod
half-bridge/half-bridge2.pretty/: Strap-22mm-2mm.kicad_mod  Strap-24mm-2mm.kicad_mod  Strap-26mm-2mm.kicad_mod  Strap-27mm-2mm.kicad_mod  Strap-27mm-4mm-smd.kicad_mod  Strap-28mm-2mm.kicad_mod  Strap-30mm-2mm.kicad_mod  TO-247-3_Horizontal_TabUp.kicad_mod  Terminal_Block_Welder.kicad_mod  Terminal_Block_Welder_no_hole.kicad_mod
mechanics/: Makefile
mechanics/front/: front.scad
pico-controller/: RPi_Pico.lib  pico-controller.kicad_pcb  pico-controller.sch
pico-controller/datasheets/: ctn.csv
scripts/: build-picoprobe.sh  flash.sh  pico-openocd.sh
scripts/font-generator/: convert.py  script.fontforge
small-power/: small-power.kicad_pcb  small-power.pro
